apps/apps-dev/servarr/extras/tls/kavita/Service.yaml
# Service pour Kavita
apiVersion: v1
kind: Service
metadata:
  name: kavita-service
  labels:
    app: kavita
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: kavita
