apps/apps-dev/servarr/extras/tls/kavita/Ingress.yaml
# Ingress pour Kavita
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-ingress
  labels:
    app: kavita
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: books.wheezy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita-service
                port:
                  number: 5000
